# Kursovaya2

./: README.md  main.py  pyproject.toml
src/: filehendler.py  hh_api.py  vacancies.py
tests/: test_filehendler.py  test_hh_api.py  test_vacancies.py
